<?xml version="1.0"?>
<package format="3">
  <name>acoustic_msgs</name>
  <version>1.1.0</version>
  <description>The acoustic_msgs package, with proposed messages for common
  underwater sensors (DVL, multibeam sonar, imaging sonar)
  </description>

  <maintainer email="lindzey@uw.edu">Laura Lindzey</maintainer>

  <license>BSD-3-Clause</license>

  <author email="ivaughn@whoi.edu">Ian Vaughn</author>
  <author email="amarburg@apl.washington.edu">Aaron Marburg</author>
  <author email="lindzey@uw.edu">Laura Lindzey</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- TODO: Port rosbag migration rule if needed -->
  <!-- <depend>rosbag_migration_rule</depend>
  <export>
    <rosbag_migration_rule rule_file="bmr/projected_sonar_image.bmr"/>
  </export> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
