<?xml version="1.0"?>
<package format="3">
  <name>environmental_msgs</name>
  <version>1.1.0</version>
  <description>The environmental_msgs package, with proposed messages for common
  underwater environmental sensors (e.g., conductivity, turbidity, dissolved oxygen)
  </description>

  <maintainer email="lindzey@uw.edu">Laura Lindzey</maintainer>

  <license>BSD-3-Clause</license>

  <author email="amarburg@uw.edu">Aaron Marburg</author>
  <author email="lindzey@uw.edu">Laura Lindzey</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>
