<?xml version="1.0"?>
<package format="2">
  <name>hydrographic_core_msgs</name>
  <version>0.0.0</version>
  <description>The environmental_msgs package contains messages common to other hydrographic_msgs
  packages.  This may include core messages used by other message types or messages published directly
  by typical sensor drivers (e.g. RawDataStamped).
  </description>

  <maintainer email="lindzey@uw.edu">Laura Lindzey</maintainer>

  <license>BSD</license>

  <author email="kris@seaward.science">Kristopher Krasnosky</author>
  <author email="lindzey@uw.edu">Laura Lindzey</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

   <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
