<?xml version="1.0"?>
<package format="2">
  <name>marine_sensor_msgs</name>
  <version>1.1.0</version>
  <description>The marine_sensor_msgs package, meant to contain messages for common
  underwater sensors (e.g., conductivity, turbidity, dissolved oxygen)
  </description>

  <maintainer email="lindzey@uw.edu">Laura Lindzey</maintainer>

  <license>BSD-3-Clause</license>

  <author email="amarburg@uw.edu">Aaron Marburg</author>
  <author email="lindzey@uw.edu">Laura Lindzey</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>rosbag_migration_rule</depend>
  <export>
    <!-- Rename message types from hydrographic_msgs/environmental_msgs
         to marine_msgs/marine_sensor_msgs. -->
    <rosbag_migration_rule rule_file="bmr/order00_package_rename.bmr"/>
    <rosbag_migration_rule rule_file="bmr/RadarSector.bmr"/>
  </export>


</package>
