<?xml version="1.0"?>
<package format="3">
  <name>marine_sensor_msgs</name>
  <version>2.0.1</version>
  <description>The marine_sensor_msgs package, meant to contain messages for common
  underwater sensors (e.g., conductivity, turbidity, dissolved oxygen)
  </description>

  <maintainer email="lindzey@uw.edu">Laura Lindzey</maintainer>
  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD-3-Clause</license>

  <author email="amarburg@uw.edu">Aaron Marburg</author>
  <author email="lindzey@uw.edu">Laura Lindzey</author>
  <author email="roland@ccom.unh.edu">Roland Arsenault</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
