<?xml version="1.0"?>
<package format="3">
  <name>marine_sensor_msgs</name>
  <version>2.1.0</version>
  <description>The marine_sensor_msgs package, meant to contain messages for common
  underwater sensors (e.g., conductivity, turbidity, dissolved oxygen)
  </description>

  <maintainer email="lindzey@uw.edu">Laura Lindzey</maintainer>
  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD-3-Clause</license>

  <author email="amarburg@uw.edu">Aaron Marburg</author>
  <author email="lindzey@uw.edu">Laura Lindzey</author>
  <author email="roland@ccom.unh.edu">Roland Arsenault</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
